# browser-launcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  err.rs  launcher.rs  main.rs  registry.rs
